--- a/Projeto/Instawa/www/views/cadastro.html
+++ b/Projeto/Instawa/www/views/cadastro.html
@@ -4,19 +4,22 @@
 
 <ion-content>
 
-<div class="list">
-  <label class="item item-input">
-    <input type="text" ng-model="dadosUsuario.nome" placeholder="Nome">
-  </label>
-  <label class="item item-input">
-    <input type="email" ng-model="dadosUsuario.email" placeholder="E-mail">
-  </label>
-  <label class="item item-input">
-    <input type="password"  ng-model="dadosUsuario.senha" placeholder="Senha">
-  </label>
+  <div class="list">
 
-  <button class="button button-stable" ng-click="cadastrar()">
-    Cadastrar
-  </button>
+    <label class="item item-input">
+      <input type="text" ng-model="dadosUsuario.nome" placeholder="Nome">
+    </label>
+    <label class="item item-input">
+      <input type="email" ng-model="dadosUsuario.email" placeholder="E-mail">
+    </label>
+    <label class="item item-input">
+      <input type="password" ng-model="dadosUsuario.senha" placeholder="Senha">
+    </label>
+
+    <button class="button button-stable" ng-click="cadastrar()">
+      Cadastrar
+    </button>
+
+  </div>
 
 </ion-content>
