--- a/Projeto/Instawa/www/views/perfilUsuario.html
+++ b/Projeto/Instawa/www/views/perfilUsuario.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col">
     <div class="item-avatar" style="height: 200px;">
-      <img ng-click="trocarFoto()" ng-src="{{dadosUsuario.foto}}" style="max-width: 200px; max-height: 200px; top: 50px;">
+      <img ng-src="{{dadosUsuario.foto}}" style="max-width: 200px; max-height: 200px; top: 50px;">
     </div>
   </div>
 </div>
